updated 파이썬 강의 #05.ipynb

--- a/파이썬 강의 #05.ipynb
+++ b/파이썬 강의 #05.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
        "242857"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
     "\n",
     "import requests\n",
     "html = requests.get(html_url).text\n",
-    "open(\"dump.html\", \"wt\").write(html)\n",
+    "open(\"dump.html\", \"wt\", encoding=\"utf8\").write(html)\n",
     "\n",
     "image_data = requests.get(image_url, headers={'referer': html_url}).content\n",
     "open(\"dump.jpg\", \"wb\").write(image_data)"
@@ -85,6 +85,349 @@
    ],
    "source": [
     "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 9770276 강길부\n",
+      "2 9770933 강병원\n",
+      "3 9771036 강석진\n",
+      "4 9770512 강석호\n",
+      "5 9770279 강창일\n",
+      "6 9771054 강효상\n",
+      "7 9771007 강훈식\n",
+      "8 9770708 경대수\n",
+      "9 9770931 고용진\n",
+      "10 9770961 곽대훈\n",
+      "11 9770956 곽상도\n",
+      "12 9771066 권미혁\n",
+      "13 9771004 권석창\n",
+      "14 9770679 권성동\n",
+      "15 9770977 권은희\n",
+      "16 9770998 권칠승\n",
+      "17 9770937 금태섭\n",
+      "18 9770927 기동민\n",
+      "19 9771033 김경수\n",
+      "20 9770970 김경진\n",
+      "21 9770712 김경협\n",
+      "22 9770713 김관영\n",
+      "23 9770523 김광림\n",
+      "24 9771011 김광수\n",
+      "25 9771044 김규환\n",
+      "26 9770716 김기선\n",
+      "27 9770719 김도읍\n",
+      "28 9770295 김동철\n",
+      "29 9770997 김두관\n",
+      "30 9770721 김명연\n",
+      "31 9770895 김무성\n",
+      "32 9770723 김민기\n",
+      "33 9770983 김병관\n",
+      "34 9770941 김병기\n",
+      "35 9770984 김병욱\n",
+      "36 9770960 김부겸\n",
+      "37 9771077 김삼화\n",
+      "38 9770725 김상훈\n",
+      "39 9770527 김상희\n",
+      "40 9771024 김석기\n",
+      "41 9770930 김선동\n",
+      "42 9771065 김성수\n",
+      "43 9770942 김성식\n",
+      "44 9770985 김성원\n",
+      "45 9770727 김성찬\n",
+      "46 9770974 김성태\n",
+      "47 9771046 김성태\n",
+      "48 9770534 김세연\n",
+      "49 9771075 김수민\n",
+      "50 9771053 김순례\n",
+      "51 9771049 김승희\n",
+      "52 9770538 김영우\n",
+      "53 9770975 김영주\n",
+      "54 9770981 김영진\n",
+      "55 9770949 김영춘\n",
+      "56 9770934 김영호\n",
+      "57 9770542 김용태\n",
+      "58 9770310 김재경\n",
+      "59 9770993 김정우\n",
+      "60 9771023 김정재\n",
+      "61 9770316 김정훈\n",
+      "62 9771083 김종대\n",
+      "63 9771009 김종민\n",
+      "64 9771048 김종석\n",
+      "65 9771057 김종인\n",
+      "66 9770738 김종태\n",
+      "67 9771016 김종회\n",
+      "68 9770978 김종훈\n",
+      "69 9771078 김중로\n",
+      "70 9770740 김진태\n",
+      "71 9770982 김진표\n",
+      "72 9770986 김철민\n",
+      "73 9770741 김태년\n",
+      "74 9770742 김태흠\n",
+      "75 9770670 김학용\n",
+      "76 9770991 김한정\n",
+      "77 9770744 김한표\n",
+      "78 9770953 김해영\n",
+      "79 9771061 김현권\n",
+      "80 9770746 김현미\n",
+      "81 9771055 김현아\n",
+      "82 9770903 나경원\n",
+      "83 9770752 남인순\n",
+      "84 9770753 노웅래\n",
+      "85 9771031 노회찬\n",
+      "86 9770755 도종환\n",
+      "87 9771062 문미옥\n",
+      "88 9771042 문진국\n",
+      "89 9770084 문희상\n",
+      "90 9770964 민경욱\n",
+      "91 9770761 민병두\n",
+      "92 9770764 민홍철\n",
+      "93 9771056 박경미\n",
+      "94 9770911 박광온\n",
+      "95 9770765 박남춘\n",
+      "96 9770767 박대출\n",
+      "97 9770768 박덕흠\n",
+      "98 9770908 박맹우\n",
+      "99 9770899 박명재\n",
+      "100 9770770 박범계\n",
+      "101 9770090 박병석\n",
+      "102 9771073 박선숙\n",
+      "103 9770944 박성중\n",
+      "104 9770987 박순자\n",
+      "105 9770347 박영선\n",
+      "106 9771030 박완수\n",
+      "107 9770774 박완주\n",
+      "108 9770929 박용진\n",
+      "109 9770776 박인숙\n",
+      "110 9770950 박재호\n",
+      "111 9770995 박정\n",
+      "112 9770932 박주민\n",
+      "113 9770566 박주선\n",
+      "114 9771071 박주현\n",
+      "115 9771022 박준영\n",
+      "116 9770568 박지원\n",
+      "117 9770963 박찬대\n",
+      "118 9771005 박찬우\n",
+      "119 9770779 박홍근\n",
+      "120 9770904 배덕광\n",
+      "121 9771025 백승주\n",
+      "122 9770573 백재현\n",
+      "123 9770980 백혜련\n",
+      "124 9770356 변재일\n",
+      "125 9770784 서영교\n",
+      "126 9770898 서청원\n",
+      "127 9771035 서형수\n",
+      "128 9770786 설훈\n",
+      "129 9771008 성일종\n",
+      "130 9770999 소병훈\n",
+      "131 9771019 손금주\n",
+      "132 9770935 손혜원\n",
+      "133 9770969 송기석\n",
+      "134 9771001 송기헌\n",
+      "135 9770996 송석준\n",
+      "136 9770967 송영길\n",
+      "137 9771058 송옥주\n",
+      "138 9771039 송희경\n",
+      "139 9770792 신경민\n",
+      "140 9770968 신동근\n",
+      "141 9771045 신보라\n",
+      "142 9770921 신상진\n",
+      "143 9771069 신용현\n",
+      "144 9770989 신창현\n",
+      "145 9770869 심상정\n",
+      "146 9770798 심재권\n",
+      "147 9770138 심재철\n",
+      "148 9770587 안규백\n",
+      "149 9770372 안민석\n",
+      "150 9770919 안상수\n",
+      "151 9770896 안철수\n",
+      "152 9771017 안호영\n",
+      "153 9770375 양승조\n",
+      "154 9771010 어기구\n",
+      "155 9771034 엄용수\n",
+      "156 9770591 여상규\n",
+      "157 9770802 염동열\n",
+      "158 9771070 오세정\n",
+      "159 9770918 오신환\n",
+      "160 9771037 오영훈\n",
+      "161 9770380 오제세\n",
+      "162 9770871 우상호\n",
+      "163 9770872 우원식\n",
+      "164 9770592 원유철\n",
+      "165 9770386 원혜영\n",
+      "166 9771038 위성곤\n",
+      "167 9770387 유기준\n",
+      "168 9770966 유동수\n",
+      "169 9771050 유민봉\n",
+      "170 9770594 유성엽\n",
+      "171 9770497 유승민\n",
+      "172 9770874 유승희\n",
+      "173 9770807 유은혜\n",
+      "174 9770912 유의동\n",
+      "175 9770596 유재중\n",
+      "176 9770808 윤관석\n",
+      "177 9770955 윤상직\n",
+      "178 9770598 윤상현\n",
+      "179 9771085 윤소하\n",
+      "180 9770811 윤영석\n",
+      "181 9771021 윤영일\n",
+      "182 9770812 윤재옥\n",
+      "183 9770979 윤종오\n",
+      "184 9771051 윤종필\n",
+      "185 9771032 윤한홍\n",
+      "186 9770876 윤호중\n",
+      "187 9770813 윤후덕\n",
+      "188 9770905 이개호\n",
+      "189 9770406 이군현\n",
+      "190 9771080 이동섭\n",
+      "191 9771028 이만희\n",
+      "192 9770602 이명수\n",
+      "193 9771072 이상돈\n",
+      "194 9770414 이상민\n",
+      "195 9770416 이석현\n",
+      "196 9771003 이양수\n",
+      "197 9770822 이언주\n",
+      "198 9770824 이완영\n",
+      "199 9771067 이용득\n",
+      "200 9771018 이용주\n",
+      "201 9771015 이용호\n",
+      "202 9770825 이우현\n",
+      "203 9770826 이원욱\n",
+      "204 9770972 이은권\n",
+      "205 9770947 이은재\n",
+      "206 9770878 이인영\n",
+      "207 9770829 이장우\n",
+      "208 9771060 이재정\n",
+      "209 9771082 이정미\n",
+      "210 9770916 이정현\n",
+      "211 9770194 이종걸\n",
+      "212 9770945 이종구\n",
+      "213 9771040 이종명\n",
+      "214 9770914 이종배\n",
+      "215 9770499 이주영\n",
+      "216 9770621 이진복\n",
+      "217 9770678 이찬열\n",
+      "218 9770835 이채익\n",
+      "219 9771002 이철규\n",
+      "220 9770685 이철우\n",
+      "221 9771063 이철희\n",
+      "222 9770623 이춘석\n",
+      "223 9771076 이태규\n",
+      "224 9770836 이학영\n",
+      "225 9770625 이학재\n",
+      "226 9770879 이해찬\n",
+      "227 9770837 이헌승\n",
+      "228 9770838 이현재\n",
+      "229 9770943 이혜훈\n",
+      "230 9770939 이훈\n",
+      "231 9770839 인재근\n",
+      "232 9771041 임이자\n",
+      "233 9771000 임종성\n",
+      "234 9770688 장병완\n",
+      "235 9771026 장석춘\n",
+      "236 9771079 장정숙\n",
+      "237 9770954 장제원\n",
+      "238 9770951 전재수\n",
+      "239 9770846 전해철\n",
+      "240 9770946 전현희\n",
+      "241 9770926 전혜숙\n",
+      "242 9771047 전희경\n",
+      "243 9770439 정갑윤\n",
+      "244 9771013 정동영\n",
+      "245 9770229 정병국\n",
+      "246 9770881 정성호\n",
+      "247 9770230 정세균\n",
+      "248 9770928 정양석\n",
+      "249 9770907 정용기\n",
+      "250 9770847 정우택\n",
+      "251 9771012 정운천\n",
+      "252 9770965 정유섭\n",
+      "253 9771020 정인화\n",
+      "254 9770988 정재호\n",
+      "255 9770957 정종섭\n",
+      "256 9771006 정진석\n",
+      "257 9771068 정춘숙\n",
+      "258 9770958 정태옥\n",
+      "259 9771064 제윤경\n",
+      "260 9770450 조경태\n",
+      "261 9771014 조배숙\n",
+      "262 9770973 조승래\n",
+      "263 9770648 조원진\n",
+      "264 9770990 조응천\n",
+      "265 9770456 조정식\n",
+      "266 9771052 조훈현\n",
+      "267 9770992 주광덕\n",
+      "268 9770458 주승용\n",
+      "269 9770883 주호영\n",
+      "270 9770925 지상욱\n",
+      "271 9770852 진선미\n",
+      "272 9770462 진영\n",
+      "273 9771074 채이배\n",
+      "274 9770920 천정배\n",
+      "275 9771029 최경환\n",
+      "276 9770976 최경환\n",
+      "277 9771027 최교일\n",
+      "278 9771081 최도자\n",
+      "279 9770948 최명길\n",
+      "280 9771043 최연혜\n",
+      "281 9771059 최운열\n",
+      "282 9770952 최인호\n",
+      "283 9770962 추경호\n",
+      "284 9770659 추미애\n",
+      "285 9771084 추혜선\n",
+      "286 9770994 표창원\n",
+      "287 9770858 하태경\n",
+      "288 9770477 한선교\n",
+      "289 9770859 한정애\n",
+      "290 9770860 함진규\n",
+      "291 9770862 홍문종\n",
+      "292 9770886 홍문표\n",
+      "293 9770676 홍영표\n",
+      "294 9770959 홍의락\n",
+      "295 9770864 홍익표\n",
+      "296 9770665 홍일표\n",
+      "297 9770913 홍철호\n",
+      "298 9770669 황영철\n",
+      "299 9770867 황주홍\n",
+      "300 9770936 황희\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 국회의원 목록\n",
+    "url = \"http://www.assembly.go.kr/assm/memact/congressman/memCond/memCondListAjax.do?currentPage=1&rowPerPage=300\"\n",
+    "\n",
+    "import requests\n",
+    "html = requests.get(url).text\n",
+    "\n",
+    "'''\n",
+    "기본 구조\n",
+    "class=\"memberna_list\"\n",
+    "    <a href=\"javascript:jsMemPop('9770276')\" title=\"강길부의원정보 새창에서 열림\">강길부</a>\n",
+    "    <a href=\"javascript:jsMemPop('9770933')\" title=\"강병원의원정보 새창에서 열림\">강병원</a>\n",
+    "    <a href=\"javascript:jsMemPop('9771036')\" title=\"강석진의원정보 새창에서 열림\">강석진</a>\n",
+    "'''\n",
+    "\n",
+    "import re\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "for idx, tag in enumerate(soup.select('.memberna_list a[href*=jsMemPop]'), 1):\n",
+    "    # print(tag)\n",
+    "    js = tag['href']\n",
+    "    matched = re.match(r'javascript:jsMemPop\\(\\'(\\d+)\\'\\)', js)\n",
+    "    if matched:\n",
+    "        mem_code = matched.group(1)\n",
+    "        mem_name = tag.text\n",
+    "        print(idx, mem_code, mem_name)"
    ]
   },
   {
