--- a/파이썬 강의 #05.ipynb
+++ b/파이썬 강의 #05.ipynb
@@ -431,6 +431,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256491"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "python_query_url = \"https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&oquery=%ED%8C%8C%EC%9D%B4%EC%8D%AC&ie=utf8&query=%ED%8C%8C%EC%9D%B4%EC%8D%AC\"\n",
+    "\n",
+    "import requests\n",
+    "html = requests.get(python_query_url).text\n",
+    "open(\"python_query.html\", \"wt\", encoding=\"utf8\").write(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "page loaded !!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 네이버 검색 수행\n",
+    "\n",
+    "import os\n",
+    "from contextlib import contextmanager\n",
+    "from selenium import webdriver\n",
+    "from selenium.common.exceptions import TimeoutException\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "\n",
+    "@contextmanager\n",
+    "def chrome():\n",
+    "    browser = None\n",
+    "    try:\n",
+    "        browser = webdriver.Chrome('./mac64_chromedriver')\n",
+    "        yield browser\n",
+    "    finally:\n",
+    "        if browser:\n",
+    "            browser.close()\n",
+    "\n",
+    "def main():\n",
+    "    with chrome() as browser:\n",
+    "        browser.get('http://naver.com')\n",
+    "\n",
+    "        element = browser.find_element_by_name('query')\n",
+    "        element.send_keys('파이썬')\n",
+    "        element.send_keys(Keys.RETURN)\n",
+    "\n",
+    "        delay = 10\n",
+    "        try:\n",
+    "            WebDriverWait(browser, delay).until(\n",
+    "                EC.presence_of_element_located((By.ID, 'main_pack'))\n",
+    "            )\n",
+    "        except TimeoutException:\n",
+    "            print('timeout')\n",
+    "\n",
+    "        print('page loaded !!!')\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
