--- a/파이썬 강의 #05.ipynb
+++ b/파이썬 강의 #05.ipynb
@@ -494,7 +494,7 @@
     "def chrome():\n",
     "    browser = None\n",
     "    try:\n",
-    "        browser = webdriver.Chrome('./mac64_chromedriver')\n",
+    "        browser = webdriver.Chrome('./mac64_chromedriver')  # FIXME: 각자 경로에 맞게 수정해주세요.\n",
     "        yield browser\n",
     "    finally:\n",
     "        if browser:\n",
@@ -520,6 +520,94 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "너의 이름이 무엇이냐?이진석입니다.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'이진석입니다.'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input('너의 이름이 무엇이냐?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "너의 암호가 무엇이냐?1234\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'1234'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input('너의 암호가 무엇이냐?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "너의 암호가 무엇이냐?········\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'1234'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from getpass import getpass\n",
+    "getpass('너의 암호가 무엇이냐?')"
    ]
   },
   {
