--- a/파이썬 강의 #05.ipynb
+++ b/파이썬 강의 #05.ipynb
@@ -612,6 +612,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naver User ID : allieuslee\n",
+      "Naver User Password : ········\n",
+      "메일 서비스로 이동.\n",
+      "page loaded !!!\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "축하드려요 Microchip PIC 사용자 커뮤니티 카페에 가입 되셨습니다.\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "$1000 당첨의 기회를 누리세요! 자금 결제 요청\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "Netflix 멤버십 해지 알림\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "$1000 당첨의 기회를 누리세요! 자금 결제 요청\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "[네이버페이]구매하신 제품의 자동구매확정 안내입니다\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "[네이버페이]구매하신 제품의구매확정처리 부탁 드립니다\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "개인정보 이용내역을 안내 드립니다. \n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "[네이버페이] 결제하신 내역을 안내해드립니다.\n",
+      "[광고][정부지원 무료교육] 11기 모집!!! '온라인마케팅 제대로 시작하기' / 정책자금대출 최대1억 신청자격 부여 (11.14 개강)\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n",
+      "이진석님, 새 알림 4개 - 확인해주세요\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 네이버 이메일 목록 수집\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "from time import sleep\n",
+    "from getpass import getpass\n",
+    "from bs4 import BeautifulSoup\n",
+    "from contextlib import contextmanager\n",
+    "from selenium import webdriver\n",
+    "from selenium.common.exceptions import TimeoutException\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "\n",
+    "\n",
+    "@contextmanager\n",
+    "def chrome():\n",
+    "    browser = None\n",
+    "    try:\n",
+    "        browser = webdriver.Chrome('./chromedriver')  # FIXME: 각자 환경에 맞게 수정해주세요.\n",
+    "        yield browser\n",
+    "    finally:\n",
+    "        if browser:\n",
+    "            browser.close()\n",
+    "\n",
+    "\n",
+    "def wait(browser, delay, by, target):\n",
+    "    try:\n",
+    "        WebDriverWait(browser, delay).until(\n",
+    "            EC.presence_of_element_located((by, target))\n",
+    "        )\n",
+    "    except TimeoutException:\n",
+    "        print('timeout')\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "\n",
+    "def main(user_id, user_pw):\n",
+    "    with chrome() as browser:\n",
+    "        browser.get('https://nid.naver.com/nidlogin.login')\n",
+    "\n",
+    "        element = browser.find_element_by_id('id')\n",
+    "        element.send_keys(user_id)\n",
+    "\n",
+    "        element = browser.find_element_by_id('pw')\n",
+    "        element.send_keys(user_pw)\n",
+    "\n",
+    "        element.send_keys(Keys.RETURN)\n",
+    "\n",
+    "        sleep(3)\n",
+    "\n",
+    "        wait(browser, 3, By.TAG_NAME, 'html')\n",
+    "\n",
+    "        if 'nidlogin.login' in browser.current_url:\n",
+    "            print('로그인 실패')\n",
+    "            return None\n",
+    "\n",
+    "        print('메일 서비스로 이동.')\n",
+    "        browser.get('http://mail.naver.com')\n",
+    "\n",
+    "        wait(browser, 3, By.ID, 'list_for_view')\n",
+    "\n",
+    "        print('page loaded !!!')\n",
+    "\n",
+    "        html = browser.page_source\n",
+    "        soup = BeautifulSoup(html, 'html.parser')\n",
+    "        for row in soup.select('#list_for_view .mailList > li'):\n",
+    "            title = row.select('.subject .mail_title')[0]\n",
+    "            title.select('.blind')[0].extract()\n",
+    "            print(title.text)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    user_id = input('Naver User ID : ')\n",
+    "    user_pw = getpass('Naver User Password : ')\n",
+    "\n",
+    "    main(user_id, user_pw)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
