updated 파이썬 강의 #05.ipynb

--- a/파이썬 강의 #05.ipynb
+++ b/파이썬 강의 #05.ipynb
@@ -612,52 +612,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Naver User ID : allieuslee\n",
-      "Naver User Password : ········\n",
-      "메일 서비스로 이동.\n",
-      "page loaded !!!\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-27 20:58\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-26 21:09\n",
-      "Microchip PIC 사용자 .. 축하드려요 Microchip PIC 사용자 커뮤니티 카페에 가입 되셨습니다. 11-26 18:52\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-25 20:34\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-24 20:53\n",
-      "Payoneer $1000 당첨의 기회를 누리세요! 자금 결제 요청 11-24 02:46\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-23 20:48\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-22 21:10\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-21 20:44\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-20 21:00\n",
-      "Netflix Netflix 멤버십 해지 알림 11-20 03:38\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-19 20:37\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-18 20:33\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-17 20:49\n",
-      "Payoneer $1000 당첨의 기회를 누리세요! 자금 결제 요청 11-16 23:55\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-16 21:02\n",
-      "네이버페이 [네이버페이]구매하신 제품의 자동구매확정 안내입니다 11-16 14:53\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-15 21:13\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-14 20:58\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-13 04:10\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-11 20:51\n",
-      "네이버페이 [네이버페이]구매하신 제품의구매확정처리 부탁 드립니다 11-11 11:23\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-10 21:13\n",
-      "네이버 개인정보 이용내역을 안내 드립니다.  11-10 12:15\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-09 20:59\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-08 21:30\n",
-      "네이버페이 [네이버페이] 결제하신 내역을 안내해드립니다. 11-08 11:57\n",
-      "biz_mentor [광고][정부지원 무료교육] 11기 모집!!! '온라인마케팅 제대로 시작하기' / 정책자금대출 최대1억 신청자격 부여 (11.14 개강) 11-08 10:04\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-07 20:50\n",
-      "Facebook 이진석님, 새 알림 4개 - 확인해주세요 11-06 20:17\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 네이버 이메일 목록 수집\n",
     "\n",
@@ -730,18 +689,18 @@
     "        for blind_tag in soup.select('.blind'):\n",
     "            blind_tag.extract()\n",
     "        \n",
-    "        for row in soup.select('#list_for_view .mailList > li'):\n",
-    "            name_tag = row.select('.name')[0]\n",
+    "        for row_tag in soup.select('#list_for_view .mailList > li'):\n",
+    "            name_tag = row_tag.select('.name')[0]\n",
     "            # name_tag.select('.blind')[0].extract()\n",
     "            name = name_tag.text\n",
     "\n",
-    "            title = row.select('.subject .mail_title')[0]\n",
-    "            # title.select('.blind')[0].extract()\n",
+    "            title_tag = row_tag.select('.subject .mail_title')[0]\n",
+    "            # title_tag.select('.blind')[0].extract()\n",
     "            \n",
-    "            date_tag = row.select('.iDate')[0]\n",
+    "            date_tag = row_tag.select('.iDate')[0]\n",
     "            date = date_tag.text\n",
     "            \n",
-    "            print(name, title.text, date)\n",
+    "            print(name, title_tag.text, date)\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
