updated 파이썬 강의 #05.ipynb

--- a/파이썬 강의 #05.ipynb
+++ b/파이썬 강의 #05.ipynb
@@ -711,6 +711,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pillow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current size : (1000, 1000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import requests\n",
+    "\n",
+    "image = requests.get(\"https://ee5817f8e2e9a2e34042-3365e7f0719651e5b8d0979bce83c558.ssl.cf5.rackcdn.com/python.png\").content\n",
+    "open(\"python3.png\", \"wb\").write(image)\n",
+    "\n",
+    "im = Image.open(\"python3.png\")\n",
+    "print(\"current size : {}\".format(im.size))\n",
+    "small_im = im.resize((300, 300))  # 새로운 Image인스턴스를 생성/리턴\n",
+    "# im.thumbnail((300, 300))  # 자신의 Image 인스턴스를 변경\n",
+    "small_im.save(\"python3_thumb.png\")\n",
+    "small_im.save(\"python3_thumb.jpg\")\n",
+    "\n",
+    "canvas_white = Image.new('RGBA', small_im.size, (255, 255, 255))\n",
+    "merged_im = Image.alpha_composite(canvas_white, small_im)\n",
+    "merged_im.save('python3_bg_white.jpg')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
