updated 파이썬 강의 #05.ipynb

--- a/파이썬 강의 #05.ipynb
+++ b/파이썬 강의 #05.ipynb
@@ -753,6 +753,190 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_1.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_1.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_2.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_2.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_3.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_3.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_4.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_4.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_5.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_5.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_6.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_6.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_7.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_7.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_8.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_8.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_9.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_9.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_10.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_10.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_11.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_11.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_12.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_12.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_13.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_13.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_14.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_14.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_15.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_15.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_16.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_16.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_17.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_17.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_18.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_18.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_19.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_19.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_20.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_20.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_21.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_21.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_22.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_22.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_23.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_23.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_24.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_24.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_25.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_25.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_26.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_26.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_27.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_27.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_28.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_28.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_29.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_29.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_30.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_30.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_31.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_31.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_32.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_32.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_33.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_33.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_34.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_34.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_35.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_35.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_36.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_36.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_37.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_37.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_38.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_38.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_39.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_39.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_40.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_40.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_41.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_41.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_42.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_42.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_43.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_43.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_44.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_44.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_45.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_45.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_46.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_46.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_47.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_47.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_48.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_48.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_49.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_49.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_50.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_50.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_51.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_51.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_52.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_52.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_53.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_53.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_54.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_54.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_55.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_55.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_56.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_56.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_57.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_57.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_58.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_58.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_59.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_59.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_60.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_60.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_61.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_61.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_62.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_62.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_63.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_63.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_64.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_64.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_65.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_65.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_66.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_66.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_67.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_67.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_68.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_68.jpg\n",
+      "cached 20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_69.jpg\n",
+      "20161122164645_837fed4034479c54b9dae8c87eb658b6_IMAG01_69.jpg\n",
+      "cached 20161122164856_146fcd0c3e167b9d1344c3bc33a3a7c5_IMAG01_70.jpg\n",
+      "20161122164856_146fcd0c3e167b9d1344c3bc33a3a7c5_IMAG01_70.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 네이버 웹툰, 특정 에피소드 이미지 Merge\n",
+    "\n",
+    "ep_url = \"http://comic.naver.com/webtoon/detail.nhn?titleId=662774&no=65&weekday=wed\"\n",
+    "\n",
+    "import os\n",
+    "import requests\n",
+    "from time import sleep\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def image_get(url, *args, **kwargs):\n",
+    "    filename = os.path.basename(url)\n",
+    "    if os.path.exists(filename):\n",
+    "        print('cached {}'.format(filename))\n",
+    "        return open(filename, 'rb').read()\n",
+    "    print('read {}'.format(url))\n",
+    "    return requests.get(url, *args, **kwargs).content\n",
+    "\n",
+    "html = requests.get(ep_url).text\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "for img_tag in soup.select('.wt_viewer img'):\n",
+    "    img_url = img_tag['src']\n",
+    "    img_data = image_get(img_url, headers={'referer': ep_url})\n",
+    "    img_name = os.path.basename(img_url)\n",
+    "    print(img_name)\n",
+    "    open(img_name, 'wb').write(img_data)\n",
+    "    sleep(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
