updated 파이썬 강의 #05.ipynb

--- a/파이썬 강의 #05.ipynb
+++ b/파이썬 강의 #05.ipynb
@@ -450,7 +450,7 @@
     "\n",
     "canvas_size = [\n",
     "    max(im.width for im in image_list),\n",
-    "    min(65000, sum(im.height for im in image_list)),\n",
+    "    min(65000, sum(im.height for im in image_list)),  # Pillow Image 가 최대 65000픽셀까지 지원\n",
     "]\n",
     "\n",
     "print('canvas_size :', canvas_size)\n",
